tests/ui/traits/issue-43784-supertrait.stderr
error[E0277]: the trait bound `T: Copy` is not satisfied
  --> $DIR/issue-43784-supertrait.rs:8:22
   |
LL | impl<T> Complete for T {}
   |                      ^ the trait `Copy` is not implemented for `T`
   |
note: required for `T` to implement `Partial`
  --> $DIR/issue-43784-supertrait.rs:1:11
   |
LL | pub trait Partial: Copy {
   |           ^^^^^^^
note: required by a bound in `Complete`
  --> $DIR/issue-43784-supertrait.rs:4:21
   |
LL | pub trait Complete: Partial {
   |                     ^^^^^^^ required by this bound in `Complete`
help: consider restricting type parameter `T` with trait `Copy`
   |
LL | impl<T: std::marker::Copy> Complete for T {}
   |       +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
